parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BOOL
    BOOLEANO
    DBL
    DECIMAL
    ENTERO
    ID
    IGUAL
    INT
    PTCOMA
    STR
    TEXTO

Grammar

Rule 0     S' -> instrucciones
Rule 1     instrucciones -> instruccion instrucciones
Rule 2     instrucciones -> instruccion
Rule 3     instruccion -> comentario_una_linea
Rule 4     instruccion -> comentario_multi_linea
Rule 5     comentario_una_linea -> CUNALINEA COMENTARIO
Rule 6     comentario_multi_linea -> CMULTILINEAAPERTURA COMENTARIOMULTI CMULTILINEACIERRE

Terminals, with rules where they appear

BOOL                 : 
BOOLEANO             : 
CMULTILINEAAPERTURA  : 6
CMULTILINEACIERRE    : 6
COMENTARIO           : 5
COMENTARIOMULTI      : 6
CUNALINEA            : 5
DBL                  : 
DECIMAL              : 
ENTERO               : 
ID                   : 
IGUAL                : 
INT                  : 
PTCOMA               : 
STR                  : 
TEXTO                : 
error                : 

Nonterminals, with rules where they appear

comentario_multi_linea : 4
comentario_una_linea : 3
instruccion          : 1 2
instrucciones        : 1 0

Parsing method: LALR

state 0

    (0) S' -> . instrucciones
    (1) instrucciones -> . instruccion instrucciones
    (2) instrucciones -> . instruccion
    (3) instruccion -> . comentario_una_linea
    (4) instruccion -> . comentario_multi_linea
    (5) comentario_una_linea -> . CUNALINEA COMENTARIO
    (6) comentario_multi_linea -> . CMULTILINEAAPERTURA COMENTARIOMULTI CMULTILINEACIERRE

    CUNALINEA       shift and go to state 5
    CMULTILINEAAPERTURA shift and go to state 6

    instrucciones                  shift and go to state 1
    instruccion                    shift and go to state 2
    comentario_una_linea           shift and go to state 3
    comentario_multi_linea         shift and go to state 4

state 1

    (0) S' -> instrucciones .



state 2

    (1) instrucciones -> instruccion . instrucciones
    (2) instrucciones -> instruccion .
    (1) instrucciones -> . instruccion instrucciones
    (2) instrucciones -> . instruccion
    (3) instruccion -> . comentario_una_linea
    (4) instruccion -> . comentario_multi_linea
    (5) comentario_una_linea -> . CUNALINEA COMENTARIO
    (6) comentario_multi_linea -> . CMULTILINEAAPERTURA COMENTARIOMULTI CMULTILINEACIERRE

    $end            reduce using rule 2 (instrucciones -> instruccion .)
    CUNALINEA       shift and go to state 5
    CMULTILINEAAPERTURA shift and go to state 6

    instruccion                    shift and go to state 2
    instrucciones                  shift and go to state 7
    comentario_una_linea           shift and go to state 3
    comentario_multi_linea         shift and go to state 4

state 3

    (3) instruccion -> comentario_una_linea .

    CUNALINEA       reduce using rule 3 (instruccion -> comentario_una_linea .)
    CMULTILINEAAPERTURA reduce using rule 3 (instruccion -> comentario_una_linea .)
    $end            reduce using rule 3 (instruccion -> comentario_una_linea .)


state 4

    (4) instruccion -> comentario_multi_linea .

    CUNALINEA       reduce using rule 4 (instruccion -> comentario_multi_linea .)
    CMULTILINEAAPERTURA reduce using rule 4 (instruccion -> comentario_multi_linea .)
    $end            reduce using rule 4 (instruccion -> comentario_multi_linea .)


state 5

    (5) comentario_una_linea -> CUNALINEA . COMENTARIO

    COMENTARIO      shift and go to state 8


state 6

    (6) comentario_multi_linea -> CMULTILINEAAPERTURA . COMENTARIOMULTI CMULTILINEACIERRE

    COMENTARIOMULTI shift and go to state 9


state 7

    (1) instrucciones -> instruccion instrucciones .

    $end            reduce using rule 1 (instrucciones -> instruccion instrucciones .)


state 8

    (5) comentario_una_linea -> CUNALINEA COMENTARIO .

    CUNALINEA       reduce using rule 5 (comentario_una_linea -> CUNALINEA COMENTARIO .)
    CMULTILINEAAPERTURA reduce using rule 5 (comentario_una_linea -> CUNALINEA COMENTARIO .)
    $end            reduce using rule 5 (comentario_una_linea -> CUNALINEA COMENTARIO .)


state 9

    (6) comentario_multi_linea -> CMULTILINEAAPERTURA COMENTARIOMULTI . CMULTILINEACIERRE

    CMULTILINEACIERRE shift and go to state 10


state 10

    (6) comentario_multi_linea -> CMULTILINEAAPERTURA COMENTARIOMULTI CMULTILINEACIERRE .

    CUNALINEA       reduce using rule 6 (comentario_multi_linea -> CMULTILINEAAPERTURA COMENTARIOMULTI CMULTILINEACIERRE .)
    CMULTILINEAAPERTURA reduce using rule 6 (comentario_multi_linea -> CMULTILINEAAPERTURA COMENTARIOMULTI CMULTILINEACIERRE .)
    $end            reduce using rule 6 (comentario_multi_linea -> CMULTILINEAAPERTURA COMENTARIOMULTI CMULTILINEACIERRE .)

